# actix_web

./: Cargo.toml  package.json
src/: main.rs
webservice/: Cargo.toml
webservice/src/: handles.rs  lib.rs  main.rs  router.rs  state.rs
webservice/src/common/: constant.rs
webservice/src/config/: index.rs  mod.rs  route.rs  static_server.rs
webservice/src/module/: example.rs
webservice/src/route/: config.rs
